syntax = "proto3";

import "scalapb/scalapb.proto";

option (scalapb.options) = {
    package_name: "greet"
};

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetingRequest {
    Greeting greeting = 1;
}

message GreetingResponse {
    string result = 1;
}

service GreetingService {
    rpc Greet (GreetingRequest) returns (GreetingResponse) {};
    rpc LongGreet (stream GreetingRequest) returns (GreetingResponse) {};
}